Fixed UI error on mobile and added PWA files
Added the manifest.json file and information. Still need icons.

Added the required JavaScript to install and register service worker.

--- a/PracTui/styles/myTheme.css
+++ b/PracTui/styles/myTheme.css
@@ -58,6 +58,12 @@ body {
   padding-top: 0px;
 }
 
+@media (max-width: 575px){
+  body{
+    padding-top: 65px;
+  }
+}
+
 hr {
   margin: 1rem 0;
   color: inherit;
